--- a/AndroidDev/app/src/main/AndroidManifest.xml
+++ b/AndroidDev/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".sub_menu"></activity>
+        <activity android:name=".main_menu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
