--- a/AndroidDev/app/src/main/AndroidManifest.xml
+++ b/AndroidDev/app/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
 
     <dist:module dist:instant="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,5 +25,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
